ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: guildgram.com
      http:
        paths:
          - path: /characters/getAll
            pathType: Prefix
            backend:
              service:
                name: character-srv
                port:
                  number: 9090
